Added cloud.yml for Connection with Cloud Db Atlas
Added cloud.yml for Connection with Cloud Db Atlas

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 9094
+  port: 9096
 
 spring:
   profiles:
-    active: dev
+    active: cloud
   application:
     name: ORDER-SERVICE
 
