--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -1,10 +1,7 @@
 eureka:
-  instance:
-    preferIpAddress: true
-    hostname: eureka-0
   client:
     service-url:
-      defaultZone: http://eureka-0.eureka-service.default.svc.cluster.local:8761/eureka
+      defaultZone: http://localhost:8761/eureka/
 
 spring:
   data:
